feat: add global micro event batches
